--- a/static/css/style.css
+++ b/static/css/style.css
@@ -111,8 +111,8 @@ header {
     background-attachment: fixed;
 
     /* ваши существующие настройки для текста на фоне */
-    color: white;
-    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+    /*color: white;*/
+    /*text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);*/
 }
 
 .hero-section.with-image::before {
