--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -120,6 +120,10 @@
                         <a href="{{ url_for('admin_panel.index') }}" class="list-group-item list-group-item-action">
                             <i class="fas fa-tachometer-alt"></i> Стандартная панель администратора
                         </a>
+                        <a href="{{ url_for('admin.monitor') }}" class="list-group-item list-group-item-action">
+                            <i class="fas fa-tachometer-alt"></i>  Monitor
+                        </a>
+
                     </div>
                 </div>
             </div>
